--- a/pkgs/clan-site/src/css/shiki.css
+++ b/pkgs/clan-site/src/css/shiki.css
@@ -84,7 +84,7 @@
         background-color: var(--shiki-diff-remove-bg-color);
 
         span {
-          color: #00000050;
+          color: var(--shiki-diff-remove-fg-color);
         }
       }
 
